# openusb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  docker-compose.yml  openusb-dev.db-shm  openusb-dev.db-wal
.claude/: launch.json
.github/workflows/: ci.yml  docker.yml  release.yml
assets/: AppIcon.icns  generate-icons.sh
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: config.rs  info.rs  list.rs  mod.rs  status.rs  stop.rs  use_device.rs
client/common/: Cargo.toml
client/common/src/: api.rs  auth.rs  auto_connect.rs  config.rs  connection.rs  discovery.rs  events.rs  lib.rs  reconnect.rs  tls.rs  tray.rs  usbip.rs
client/linux/: Cargo.toml  openusb-client.desktop  openusb-client.service
client/linux/src/: main.rs
client/macos/: Cargo.toml  Info.plist  bundle.sh  dev.openusb.client.plist
client/macos/src/: main.rs  menubar.rs
client/windows/: Cargo.toml  build.rs
client/windows/src/: driver.rs  main.rs  tray.rs
packaging/deb/: build.sh  control  postinst  prerm
packaging/rpm/: openusb.spec
server/: Dockerfile
server/config/: openusb-dev.toml  openusb.toml.example
server/openusbd/: Cargo.toml
server/openusbd/src/: config.rs  main.rs  state.rs
server/openusbd/src/api/: mod.rs  rest.rs  routes.rs  websocket.rs
server/openusbd/src/auth/: acl.rs  certificate.rs  middleware.rs  mod.rs  password.rs  tokens.rs  users.rs
server/openusbd/src/events/: bus.rs  hooks.rs  mod.rs  notifications.rs  scripts.rs
server/openusbd/src/metrics/: bandwidth.rs  history.rs  latency.rs  mod.rs
server/openusbd/src/network/: discovery.rs  mod.rs  reverse.rs  tls.rs  usbip.rs
server/openusbd/src/plugins/: loader.rs
server/openusbd/src/scheduling/: scheduler.rs
server/openusbd/src/usb/: bind.rs  database.rs  device.rs  filter.rs  manager.rs  mod.rs  monitor.rs  platform.rs  platform_linux.rs  platform_sim.rs
server/scripts/: install.sh
server/systemd/: openusbd.service
shared/: Cargo.toml
shared/src/: config.rs  device.rs  lib.rs  protocol.rs  usb_ids.rs
web-dashboard/: package-lock.json  package.json  vite.config.ts
web-dashboard/src/: App.tsx  index.css  types.ts
web-dashboard/src/components/: AutoUseConfig.tsx  ClientBanner.tsx  DeviceCard.tsx  DriverStatus.tsx  StatusIndicator.tsx
web-dashboard/src/hooks/: useApi.ts  useAuth.ts  useLocalClient.ts  useWebSocket.ts
web-dashboard/src/pages/: Dashboard.tsx  LoginPage.tsx  LogsPage.tsx  UsersPage.tsx
