[package]
name = "openusb-cli"
description = "OpenUSB command-line tool — discover, attach, and manage USB devices over the network"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openusb"
path = "src/main.rs"

[dependencies]
openusb-shared = { workspace = true }
openusb-client-common = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
