[package]
name = "openusb-client-common"
description = "Shared client library for OpenUSB — discovery, connection, auto-connect logic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openusb-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
mdns-sd = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
