[package]
name = "openusb-client-common"
description = "Shared client library for OpenUSB — discovery, connection, auto-connect logic"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
tray = ["dep:tray-icon", "dep:muda", "dep:open"]

[dependencies]
openusb-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
mdns-sd = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tray-icon = { workspace = true, optional = true }
muda = { workspace = true, optional = true }
open = { version = "5", optional = true }
