[package]
name = "openusb-client-linux"
description = "OpenUSB Linux thin client — background service with local API"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openusb-client"
path = "src/main.rs"

[dependencies]
openusb-shared = { workspace = true }
openusb-client-common = { workspace = true, features = ["tray"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
