[package]
name = "openusbd"
description = "OpenUSB server daemon — shares USB devices over the network via USB/IP"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openusbd"
path = "src/main.rs"

[dependencies]
openusb-shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
mdns-sd = { workspace = true }
rusqlite = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
gethostname = { workspace = true }
